Add route for InfErhebung Search
