# src/docs/swagger.json
@@ -717,6 +717,56 @@
 				"type": "object",
 				"additionalProperties": true
 			},
+			"ISelectInfErhebungenResult": {
+				"description": "'SelectInfErhebungen' return type",
+				"properties": {
+					"audiofile": {
+						"type": "string",
+						"nullable": true
+					},
+					"besonderheiten": {
+						"type": "string",
+						"nullable": true
+					},
+					"dateipfad": {
+						"type": "string",
+						"nullable": true
+					},
+					"datum": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"idErhId": {
+						"type": "number",
+						"format": "double"
+					},
+					"idTranscriptId": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
+					"kommentar": {
+						"type": "string",
+						"nullable": true
+					},
+					"osmId": {
+						"type": "string",
+						"nullable": true
+					}
+				},
+				"required": [
+					"audiofile",
+					"besonderheiten",
+					"dateipfad",
+					"datum",
+					"idErhId",
+					"idTranscriptId",
+					"kommentar",
+					"osmId"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
 			"ISelectAllAufgabenResult": {
 				"description": "'SelectAllAufgaben' return type",
 				"properties": {
@@ -1591,6 +1641,47 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/antworten/inferh": {
+			"get": {
+				"operationId": "GetInfErhebungen",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ISelectInfErhebungenResult"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "erh",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "osm",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/aufgaben": {
